--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs-converter": "0.4.3",
+    "@tensorflow/tfjs-core": "0.11.9",
+    "@tensorflow/tfjs-layers": "0.7.2",
+    "ace-css": "^1.1.0",
     "core-js": "^3.6.5",
+    "d3-format": "^1.3.2",
+    "face-api.js": "^0.10.0",
+    "lodash.debounce": "^4.0.8",
+    "tslib": "^1.9.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -16,6 +24,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "dotenv-webpack": "^6.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
