--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,12 +11,12 @@
     "@tensorflow/tfjs-converter": "0.4.3",
     "@tensorflow/tfjs-core": "0.11.9",
     "@tensorflow/tfjs-layers": "0.7.2",
-    "ace-css": "^1.1.0",
+    "ace-css": "1.1.0",
     "core-js": "^3.6.5",
-    "d3-format": "^1.3.2",
-    "face-api.js": "^0.10.0",
-    "lodash.debounce": "^4.0.8",
-    "tslib": "^1.9.3",
+    "d3-format": "1.3.2",
+    "face-api.js": "0.10.0",
+    "lodash.debounce": "4.0.8",
+    "tslib": "1.9.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
