--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "face-api.js": "0.10.0",
     "lodash.debounce": "4.0.8",
     "tslib": "1.9.3",
+    "v-offline": "^1.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.3",
