--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-format": "1.3.2",
     "face-api.js": "0.10.0",
     "lodash.debounce": "4.0.8",
+    "register-service-worker": "^1.7.1",
     "tslib": "1.9.3",
     "v-offline": "^1.3.0",
     "vue": "^2.6.11",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^5.0.1",
