--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@tensorflow/tfjs-layers": "0.7.2",
     "ace-css": "1.1.0",
     "core-js": "^3.6.5",
+    "croc": "^0.0.22",
     "d3-format": "1.3.2",
     "face-api.js": "0.10.0",
     "lodash.debounce": "4.0.8",
-    "register-service-worker": "^1.7.1",
+    "register-service-worker": "^1.7.2",
     "tslib": "1.9.3",
     "v-offline": "^1.3.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.3",
     "vuex": "^3.6.2"
