--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tfjs",
-  "version": "0.1.0",
+  "name": "jovi",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
@@ -21,7 +21,7 @@
     "v-offline": "^1.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.4.3",
+    "vuetify": "^2.4.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
